refactor(app): refine usage
- subsys can reg each methods
